--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
-
+<!DOCTYPE html>
 <html lang="en">
-  
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Custom Simon Game</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css.css" />
 </head>
- 
 <body>
   <h1 class="game-title">Simon</h1>
-<div class="top-bar">
-  <button class="start-button" id="startBtn">Start</button>
-  <div id="level-counter">Level: 0</div>
-  <div id="high-score">High Score: 0</div>
-</div>
-  
- <div id="message"></div>
+
+  <div class="top-bar">
+    <button class="start-button" id="startBtn">Start</button>
+    <div id="level-counter">Level: 0</div>
+    <div id="high-score">High Score: 0</div>
+  </div> 
+
+  <div id="message"></div>
 
   <div class="grid">
     <div class="green-square" id="green"></div>
@@ -25,6 +24,7 @@
     <div class="blue-square" id="blue"></div>
   </div>
 
-  <!--<script src="script.js"></script>-->
+  <!-- Link to JS -->
+  <script src="js.js"></script>
 </body>
 </html>
