--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
   <link rel="stylesheet" href="css.css" />
 </head>
 <body>
+  
+  <div id="instructions">
+    <p>Watch the pattern carefully.</p>
+    <p>Repeat the sequence by clicking the squares in order.</p>
+   <!-- <p>Each round adds one new color to the pattern.</p>
+    <p>If you make a mistake, the game ends!</p>
+    <p>Reach Level 20 to win!</p>-->
+  </div>
+  
   <h1 class="game-title">Simon</h1>
+
 
   <div class="top-bar">
     <button class="start-button" id="startBtn">Start</button>
@@ -25,6 +35,6 @@
   </div>
 
   <!-- Link to JS -->
-  <script src="js.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
